--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ h3
 }
 .sources
 {
+
 text-align: right;
 padding: 10px;
 }
@@ -25,6 +26,7 @@ padding: 10px;
 {
     width: auto;
     margin: auto;
+    min-height: 720px;
     border: 1px solid rgb(145, 0, 0);
     padding: 15px;
 }
@@ -53,4 +55,16 @@ a:hover
 {
     float: right; 
     margin: 6px;
+}
+#footer
+{
+    bottom: 0;
+    width: 100%;
+    height: 30px;
+    text-align: center;
+    color: red;
+}
+.custom_header
+{
+    
 }
